# hpm-data

./: d
data/chips/: HPM5301.yaml  HPM5321.yaml  HPM5331.yaml  HPM5361.yaml  HPM5E11.yaml  HPM5E31.yaml  HPM6220.yaml  HPM6240.yaml  HPM6260.yaml  HPM6264.yaml  HPM6280.yaml  HPM6284.yaml  HPM6320.yaml  HPM6330.yaml  HPM6340.yaml  HPM6350.yaml  HPM6360.yaml  HPM6364.yaml  HPM6420.yaml  HPM6430.yaml  HPM6450.yaml  HPM6454.yaml  HPM64A0.yaml  HPM64G0.yaml  HPM6730.yaml  HPM6750.yaml  HPM6754.yaml  HPM6830.yaml  HPM6850.yaml  HPM6880.yaml  HPM68D2.yaml  HPM68D3.yaml  HPM68D4.yaml  HPM6E50.yaml  HPM6E60.yaml  HPM6E6Y.yaml  HPM6E70.yaml  HPM6E80.yaml  HPM6E84.yaml  HPM6E8Y.yaml  (+3 more)
hpm-data-gen/: Cargo.toml
hpm-data-gen/src/: dma.rs  interrupts.rs  iomux.rs  main.rs  pins.rs  sysctl.rs
hpm-data-serde/: Cargo.toml
hpm-metapac-gen/: Cargo.toml
hpm-metapac-gen/res/: Cargo.toml
hpm-metapac-gen/src/: lib.rs
