[package]
name = "hpm-metapac-gen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
regex = "1.7.1"
chiptool = { git = "https://github.com/embassy-rs/chiptool", rev = "c2a491c76a68e6bf842b3767a0d9631292591b1b" }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
proc-macro2 = "1.0.52"
hpm-data-macros = { version = "0.1.0", path = "../hpm-data-macros" }
